--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 .mysql
 composer.lock
 magento.zip
+.data
+.env
+scripts/dev-ssl/*
+scripts/etc/dev-ssl/
+scripts/etc/nginx/conf.d/
+app/code/Rede/Adquirencia/vendor/
